Augus/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     def_etiqueta_instr -> ID DOSPTS
Rule 3     instrucciones -> instrucciones instruccion
Rule 4     instrucciones -> instruccion
Rule 5     instruccion -> error
Rule 6     instruccion -> asignacion_instr
Rule 7     instruccion -> asignacion_arr_st
Rule 8     instruccion -> dec_array_instr
Rule 9     instruccion -> print_instr
Rule 10    instruccion -> goto_instr
Rule 11    instruccion -> unset_instr
Rule 12    instruccion -> exit_instr
Rule 13    instruccion -> def_etiqueta_instr
Rule 14    instruccion -> if_instr
Rule 15    asignacion_instr -> tipo_variable IGUAL expresion PTCOMA
Rule 16    dec_array_instr -> tipo_variable IGUAL ARRAY PARIZQ PARDER PTCOMA
Rule 17    asignacion_arr_st -> tipo_variable lista_parametros IGUAL expresion PTCOMA
Rule 18    lista_parametros -> lista_parametros def_par
Rule 19    lista_parametros -> def_par
Rule 20    def_par -> CORIZQ expresion CORDER
Rule 21    tipo_variable -> TEMPVAR
Rule 22    tipo_variable -> PARAM
Rule 23    tipo_variable -> FUNVAL
Rule 24    tipo_variable -> RA
Rule 25    tipo_variable -> STACK
Rule 26    tipo_variable -> SP
Rule 27    print_instr -> PRINT PARIZQ valor PARDER PTCOMA
Rule 28    goto_instr -> GOTO ID PTCOMA
Rule 29    unset_instr -> UNSET PARIZQ tipo_variable PARDER PTCOMA
Rule 30    exit_instr -> EXIT PTCOMA
Rule 31    expresion -> expresion_aritmetica
Rule 32    expresion -> expresion_relacional
Rule 33    expresion -> expresion_logica
Rule 34    expresion -> expresion_bit_a_bit
Rule 35    expresion -> expresion_unaria
Rule 36    expresion -> valor
Rule 37    expresion_aritmetica -> valor MAS valor
Rule 38    expresion_aritmetica -> valor MENOS valor
Rule 39    expresion_aritmetica -> valor MULTI valor
Rule 40    expresion_aritmetica -> valor DIVISION valor
Rule 41    expresion_aritmetica -> valor RESIDUO valor
Rule 42    expresion_relacional -> valor IGUALQUE valor
Rule 43    expresion_relacional -> valor DISTINTO valor
Rule 44    expresion_relacional -> valor MAYORIG valor
Rule 45    expresion_relacional -> valor MENORIG valor
Rule 46    expresion_relacional -> valor MAYORQUE valor
Rule 47    expresion_relacional -> valor MENORQUE valor
Rule 48    expresion_logica -> valor AND valor
Rule 49    expresion_logica -> valor OR valor
Rule 50    expresion_logica -> valor XOR valor
Rule 51    expresion_bit_a_bit -> valor ANDBB valor
Rule 52    expresion_bit_a_bit -> valor ORBB valor
Rule 53    expresion_bit_a_bit -> valor XORBB valor
Rule 54    expresion_bit_a_bit -> valor SHIFTIZQ valor
Rule 55    expresion_bit_a_bit -> valor SHIFTDER valor
Rule 56    expresion_unaria -> MENOS valor
Rule 57    expresion_unaria -> NOT valor
Rule 58    expresion_unaria -> NOTBB valor
Rule 59    expresion_unaria -> ANDBB valor
Rule 60    valor -> PARIZQ tipo PARDER valor
Rule 61    tipo -> INT
Rule 62    tipo -> FLOAT
Rule 63    tipo -> CHAR
Rule 64    valor -> ENTERO
Rule 65    valor -> DECIMAL
Rule 66    valor -> CADENA
Rule 67    valor -> CADENADOBLE
Rule 68    valor -> tipo_variable
Rule 69    valor -> tipo_variable lista_parametros
Rule 70    valor -> READ PARIZQ PARDER
Rule 71    valor -> ABS PARIZQ expresion PARDER
Rule 72    if_instr -> IF PARIZQ expresion PARDER goto_instr

Terminals, with rules where they appear

ABS                  : 71
AND                  : 48
ANDBB                : 51 59
ARRAY                : 16
CADENA               : 66
CADENADOBLE          : 67
CHAR                 : 63
CORDER               : 20
CORIZQ               : 20
DECIMAL              : 65
DISTINTO             : 43
DIVISION             : 40
DOSPTS               : 2
ENTERO               : 64
EXIT                 : 30
FLOAT                : 62
FUNVAL               : 23
GOTO                 : 28
ID                   : 2 28
IF                   : 72
IGUAL                : 15 16 17
IGUALQUE             : 42
INT                  : 61
MAS                  : 37
MAYORIG              : 44
MAYORQUE             : 46
MENORIG              : 45
MENORQUE             : 47
MENOS                : 38 56
MULTI                : 39
NOT                  : 57
NOTBB                : 58
OR                   : 49
ORBB                 : 52
PARAM                : 22
PARDER               : 16 27 29 60 70 71 72
PARIZQ               : 16 27 29 60 70 71 72
PRINT                : 27
PTCOMA               : 15 16 17 27 28 29 30
RA                   : 24
READ                 : 70
RESIDUO              : 41
SHIFTDER             : 55
SHIFTIZQ             : 54
SP                   : 26
STACK                : 25
TEMPVAR              : 21
UNSET                : 29
XOR                  : 50
XORBB                : 53
error                : 5

Nonterminals, with rules where they appear

asignacion_arr_st    : 7
asignacion_instr     : 6
dec_array_instr      : 8
def_etiqueta_instr   : 13
def_par              : 18 19
exit_instr           : 12
expresion            : 15 17 20 71 72
expresion_aritmetica : 31
expresion_bit_a_bit  : 34
expresion_logica     : 33
expresion_relacional : 32
expresion_unaria     : 35
goto_instr           : 10 72
if_instr             : 14
init                 : 0
instruccion          : 3 4
instrucciones        : 1 3
lista_parametros     : 17 18 69
print_instr          : 9
tipo                 : 60
tipo_variable        : 15 16 17 29 68 69
unset_instr          : 11
valor                : 27 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 57 58 59 60

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (3) instrucciones -> . instrucciones instruccion
    (4) instrucciones -> . instruccion
    (5) instruccion -> . error
    (6) instruccion -> . asignacion_instr
    (7) instruccion -> . asignacion_arr_st
    (8) instruccion -> . dec_array_instr
    (9) instruccion -> . print_instr
    (10) instruccion -> . goto_instr
    (11) instruccion -> . unset_instr
    (12) instruccion -> . exit_instr
    (13) instruccion -> . def_etiqueta_instr
    (14) instruccion -> . if_instr
    (15) asignacion_instr -> . tipo_variable IGUAL expresion PTCOMA
    (17) asignacion_arr_st -> . tipo_variable lista_parametros IGUAL expresion PTCOMA
    (16) dec_array_instr -> . tipo_variable IGUAL ARRAY PARIZQ PARDER PTCOMA
    (27) print_instr -> . PRINT PARIZQ valor PARDER PTCOMA
    (28) goto_instr -> . GOTO ID PTCOMA
    (29) unset_instr -> . UNSET PARIZQ tipo_variable PARDER PTCOMA
    (30) exit_instr -> . EXIT PTCOMA
    (2) def_etiqueta_instr -> . ID DOSPTS
    (72) if_instr -> . IF PARIZQ expresion PARDER goto_instr
    (21) tipo_variable -> . TEMPVAR
    (22) tipo_variable -> . PARAM
    (23) tipo_variable -> . FUNVAL
    (24) tipo_variable -> . RA
    (25) tipo_variable -> . STACK
    (26) tipo_variable -> . SP

    error           shift and go to state 4
    PRINT           shift and go to state 15
    GOTO            shift and go to state 16
    UNSET           shift and go to state 18
    EXIT            shift and go to state 19
    ID              shift and go to state 17
    IF              shift and go to state 20
    TEMPVAR         shift and go to state 21
    PARAM           shift and go to state 22
    FUNVAL          shift and go to state 23
    RA              shift and go to state 24
    STACK           shift and go to state 25
    SP              shift and go to state 26

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    asignacion_instr               shift and go to state 5
    asignacion_arr_st              shift and go to state 6
    dec_array_instr                shift and go to state 7
    print_instr                    shift and go to state 8
    goto_instr                     shift and go to state 9
    unset_instr                    shift and go to state 10
    exit_instr                     shift and go to state 11
    def_etiqueta_instr             shift and go to state 12
    if_instr                       shift and go to state 13
    tipo_variable                  shift and go to state 14

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (3) instrucciones -> instrucciones . instruccion
    (5) instruccion -> . error
    (6) instruccion -> . asignacion_instr
    (7) instruccion -> . asignacion_arr_st
    (8) instruccion -> . dec_array_instr
    (9) instruccion -> . print_instr
    (10) instruccion -> . goto_instr
    (11) instruccion -> . unset_instr
    (12) instruccion -> . exit_instr
    (13) instruccion -> . def_etiqueta_instr
    (14) instruccion -> . if_instr
    (15) asignacion_instr -> . tipo_variable IGUAL expresion PTCOMA
    (17) asignacion_arr_st -> . tipo_variable lista_parametros IGUAL expresion PTCOMA
    (16) dec_array_instr -> . tipo_variable IGUAL ARRAY PARIZQ PARDER PTCOMA
    (27) print_instr -> . PRINT PARIZQ valor PARDER PTCOMA
    (28) goto_instr -> . GOTO ID PTCOMA
    (29) unset_instr -> . UNSET PARIZQ tipo_variable PARDER PTCOMA
    (30) exit_instr -> . EXIT PTCOMA
    (2) def_etiqueta_instr -> . ID DOSPTS
    (72) if_instr -> . IF PARIZQ expresion PARDER goto_instr
    (21) tipo_variable -> . TEMPVAR
    (22) tipo_variable -> . PARAM
    (23) tipo_variable -> . FUNVAL
    (24) tipo_variable -> . RA
    (25) tipo_variable -> . STACK
    (26) tipo_variable -> . SP

    $end            reduce using rule 1 (init -> instrucciones .)
    error           shift and go to state 4
    PRINT           shift and go to state 15
    GOTO            shift and go to state 16
    UNSET           shift and go to state 18
    EXIT            shift and go to state 19
    ID              shift and go to state 17
    IF              shift and go to state 20
    TEMPVAR         shift and go to state 21
    PARAM           shift and go to state 22
    FUNVAL          shift and go to state 23
    RA              shift and go to state 24
    STACK           shift and go to state 25
    SP              shift and go to state 26

    instruccion                    shift and go to state 27
    asignacion_instr               shift and go to state 5
    asignacion_arr_st              shift and go to state 6
    dec_array_instr                shift and go to state 7
    print_instr                    shift and go to state 8
    goto_instr                     shift and go to state 9
    unset_instr                    shift and go to state 10
    exit_instr                     shift and go to state 11
    def_etiqueta_instr             shift and go to state 12
    if_instr                       shift and go to state 13
    tipo_variable                  shift and go to state 14

state 3

    (4) instrucciones -> instruccion .

    error           reduce using rule 4 (instrucciones -> instruccion .)
    PRINT           reduce using rule 4 (instrucciones -> instruccion .)
    GOTO            reduce using rule 4 (instrucciones -> instruccion .)
    UNSET           reduce using rule 4 (instrucciones -> instruccion .)
    EXIT            reduce using rule 4 (instrucciones -> instruccion .)
    ID              reduce using rule 4 (instrucciones -> instruccion .)
    IF              reduce using rule 4 (instrucciones -> instruccion .)
    TEMPVAR         reduce using rule 4 (instrucciones -> instruccion .)
    PARAM           reduce using rule 4 (instrucciones -> instruccion .)
    FUNVAL          reduce using rule 4 (instrucciones -> instruccion .)
    RA              reduce using rule 4 (instrucciones -> instruccion .)
    STACK           reduce using rule 4 (instrucciones -> instruccion .)
    SP              reduce using rule 4 (instrucciones -> instruccion .)
    $end            reduce using rule 4 (instrucciones -> instruccion .)


state 4

    (5) instruccion -> error .

    error           reduce using rule 5 (instruccion -> error .)
    PRINT           reduce using rule 5 (instruccion -> error .)
    GOTO            reduce using rule 5 (instruccion -> error .)
    UNSET           reduce using rule 5 (instruccion -> error .)
    EXIT            reduce using rule 5 (instruccion -> error .)
    ID              reduce using rule 5 (instruccion -> error .)
    IF              reduce using rule 5 (instruccion -> error .)
    TEMPVAR         reduce using rule 5 (instruccion -> error .)
    PARAM           reduce using rule 5 (instruccion -> error .)
    FUNVAL          reduce using rule 5 (instruccion -> error .)
    RA              reduce using rule 5 (instruccion -> error .)
    STACK           reduce using rule 5 (instruccion -> error .)
    SP              reduce using rule 5 (instruccion -> error .)
    $end            reduce using rule 5 (instruccion -> error .)


state 5

    (6) instruccion -> asignacion_instr .

    error           reduce using rule 6 (instruccion -> asignacion_instr .)
    PRINT           reduce using rule 6 (instruccion -> asignacion_instr .)
    GOTO            reduce using rule 6 (instruccion -> asignacion_instr .)
    UNSET           reduce using rule 6 (instruccion -> asignacion_instr .)
    EXIT            reduce using rule 6 (instruccion -> asignacion_instr .)
    ID              reduce using rule 6 (instruccion -> asignacion_instr .)
    IF              reduce using rule 6 (instruccion -> asignacion_instr .)
    TEMPVAR         reduce using rule 6 (instruccion -> asignacion_instr .)
    PARAM           reduce using rule 6 (instruccion -> asignacion_instr .)
    FUNVAL          reduce using rule 6 (instruccion -> asignacion_instr .)
    RA              reduce using rule 6 (instruccion -> asignacion_instr .)
    STACK           reduce using rule 6 (instruccion -> asignacion_instr .)
    SP              reduce using rule 6 (instruccion -> asignacion_instr .)
    $end            reduce using rule 6 (instruccion -> asignacion_instr .)


state 6

    (7) instruccion -> asignacion_arr_st .

    error           reduce using rule 7 (instruccion -> asignacion_arr_st .)
    PRINT           reduce using rule 7 (instruccion -> asignacion_arr_st .)
    GOTO            reduce using rule 7 (instruccion -> asignacion_arr_st .)
    UNSET           reduce using rule 7 (instruccion -> asignacion_arr_st .)
    EXIT            reduce using rule 7 (instruccion -> asignacion_arr_st .)
    ID              reduce using rule 7 (instruccion -> asignacion_arr_st .)
    IF              reduce using rule 7 (instruccion -> asignacion_arr_st .)
    TEMPVAR         reduce using rule 7 (instruccion -> asignacion_arr_st .)
    PARAM           reduce using rule 7 (instruccion -> asignacion_arr_st .)
    FUNVAL          reduce using rule 7 (instruccion -> asignacion_arr_st .)
    RA              reduce using rule 7 (instruccion -> asignacion_arr_st .)
    STACK           reduce using rule 7 (instruccion -> asignacion_arr_st .)
    SP              reduce using rule 7 (instruccion -> asignacion_arr_st .)
    $end            reduce using rule 7 (instruccion -> asignacion_arr_st .)


state 7

    (8) instruccion -> dec_array_instr .

    error           reduce using rule 8 (instruccion -> dec_array_instr .)
    PRINT           reduce using rule 8 (instruccion -> dec_array_instr .)
    GOTO            reduce using rule 8 (instruccion -> dec_array_instr .)
    UNSET           reduce using rule 8 (instruccion -> dec_array_instr .)
    EXIT            reduce using rule 8 (instruccion -> dec_array_instr .)
    ID              reduce using rule 8 (instruccion -> dec_array_instr .)
    IF              reduce using rule 8 (instruccion -> dec_array_instr .)
    TEMPVAR         reduce using rule 8 (instruccion -> dec_array_instr .)
    PARAM           reduce using rule 8 (instruccion -> dec_array_instr .)
    FUNVAL          reduce using rule 8 (instruccion -> dec_array_instr .)
    RA              reduce using rule 8 (instruccion -> dec_array_instr .)
    STACK           reduce using rule 8 (instruccion -> dec_array_instr .)
    SP              reduce using rule 8 (instruccion -> dec_array_instr .)
    $end            reduce using rule 8 (instruccion -> dec_array_instr .)


state 8

    (9) instruccion -> print_instr .

    error           reduce using rule 9 (instruccion -> print_instr .)
    PRINT           reduce using rule 9 (instruccion -> print_instr .)
    GOTO            reduce using rule 9 (instruccion -> print_instr .)
    UNSET           reduce using rule 9 (instruccion -> print_instr .)
    EXIT            reduce using rule 9 (instruccion -> print_instr .)
    ID              reduce using rule 9 (instruccion -> print_instr .)
    IF              reduce using rule 9 (instruccion -> print_instr .)
    TEMPVAR         reduce using rule 9 (instruccion -> print_instr .)
    PARAM           reduce using rule 9 (instruccion -> print_instr .)
    FUNVAL          reduce using rule 9 (instruccion -> print_instr .)
    RA              reduce using rule 9 (instruccion -> print_instr .)
    STACK           reduce using rule 9 (instruccion -> print_instr .)
    SP              reduce using rule 9 (instruccion -> print_instr .)
    $end            reduce using rule 9 (instruccion -> print_instr .)


state 9

    (10) instruccion -> goto_instr .

    error           reduce using rule 10 (instruccion -> goto_instr .)
    PRINT           reduce using rule 10 (instruccion -> goto_instr .)
    GOTO            reduce using rule 10 (instruccion -> goto_instr .)
    UNSET           reduce using rule 10 (instruccion -> goto_instr .)
    EXIT            reduce using rule 10 (instruccion -> goto_instr .)
    ID              reduce using rule 10 (instruccion -> goto_instr .)
    IF              reduce using rule 10 (instruccion -> goto_instr .)
    TEMPVAR         reduce using rule 10 (instruccion -> goto_instr .)
    PARAM           reduce using rule 10 (instruccion -> goto_instr .)
    FUNVAL          reduce using rule 10 (instruccion -> goto_instr .)
    RA              reduce using rule 10 (instruccion -> goto_instr .)
    STACK           reduce using rule 10 (instruccion -> goto_instr .)
    SP              reduce using rule 10 (instruccion -> goto_instr .)
    $end            reduce using rule 10 (instruccion -> goto_instr .)


state 10

    (11) instruccion -> unset_instr .

    error           reduce using rule 11 (instruccion -> unset_instr .)
    PRINT           reduce using rule 11 (instruccion -> unset_instr .)
    GOTO            reduce using rule 11 (instruccion -> unset_instr .)
    UNSET           reduce using rule 11 (instruccion -> unset_instr .)
    EXIT            reduce using rule 11 (instruccion -> unset_instr .)
    ID              reduce using rule 11 (instruccion -> unset_instr .)
    IF              reduce using rule 11 (instruccion -> unset_instr .)
    TEMPVAR         reduce using rule 11 (instruccion -> unset_instr .)
    PARAM           reduce using rule 11 (instruccion -> unset_instr .)
    FUNVAL          reduce using rule 11 (instruccion -> unset_instr .)
    RA              reduce using rule 11 (instruccion -> unset_instr .)
    STACK           reduce using rule 11 (instruccion -> unset_instr .)
    SP              reduce using rule 11 (instruccion -> unset_instr .)
    $end            reduce using rule 11 (instruccion -> unset_instr .)


state 11

    (12) instruccion -> exit_instr .

    error           reduce using rule 12 (instruccion -> exit_instr .)
    PRINT           reduce using rule 12 (instruccion -> exit_instr .)
    GOTO            reduce using rule 12 (instruccion -> exit_instr .)
    UNSET           reduce using rule 12 (instruccion -> exit_instr .)
    EXIT            reduce using rule 12 (instruccion -> exit_instr .)
    ID              reduce using rule 12 (instruccion -> exit_instr .)
    IF              reduce using rule 12 (instruccion -> exit_instr .)
    TEMPVAR         reduce using rule 12 (instruccion -> exit_instr .)
    PARAM           reduce using rule 12 (instruccion -> exit_instr .)
    FUNVAL          reduce using rule 12 (instruccion -> exit_instr .)
    RA              reduce using rule 12 (instruccion -> exit_instr .)
    STACK           reduce using rule 12 (instruccion -> exit_instr .)
    SP              reduce using rule 12 (instruccion -> exit_instr .)
    $end            reduce using rule 12 (instruccion -> exit_instr .)


state 12

    (13) instruccion -> def_etiqueta_instr .

    error           reduce using rule 13 (instruccion -> def_etiqueta_instr .)
    PRINT           reduce using rule 13 (instruccion -> def_etiqueta_instr .)
    GOTO            reduce using rule 13 (instruccion -> def_etiqueta_instr .)
    UNSET           reduce using rule 13 (instruccion -> def_etiqueta_instr .)
    EXIT            reduce using rule 13 (instruccion -> def_etiqueta_instr .)
    ID              reduce using rule 13 (instruccion -> def_etiqueta_instr .)
    IF              reduce using rule 13 (instruccion -> def_etiqueta_instr .)
    TEMPVAR         reduce using rule 13 (instruccion -> def_etiqueta_instr .)
    PARAM           reduce using rule 13 (instruccion -> def_etiqueta_instr .)
    FUNVAL          reduce using rule 13 (instruccion -> def_etiqueta_instr .)
    RA              reduce using rule 13 (instruccion -> def_etiqueta_instr .)
    STACK           reduce using rule 13 (instruccion -> def_etiqueta_instr .)
    SP              reduce using rule 13 (instruccion -> def_etiqueta_instr .)
    $end            reduce using rule 13 (instruccion -> def_etiqueta_instr .)


state 13

    (14) instruccion -> if_instr .

    error           reduce using rule 14 (instruccion -> if_instr .)
    PRINT           reduce using rule 14 (instruccion -> if_instr .)
    GOTO            reduce using rule 14 (instruccion -> if_instr .)
    UNSET           reduce using rule 14 (instruccion -> if_instr .)
    EXIT            reduce using rule 14 (instruccion -> if_instr .)
    ID              reduce using rule 14 (instruccion -> if_instr .)
    IF              reduce using rule 14 (instruccion -> if_instr .)
    TEMPVAR         reduce using rule 14 (instruccion -> if_instr .)
    PARAM           reduce using rule 14 (instruccion -> if_instr .)
    FUNVAL          reduce using rule 14 (instruccion -> if_instr .)
    RA              reduce using rule 14 (instruccion -> if_instr .)
    STACK           reduce using rule 14 (instruccion -> if_instr .)
    SP              reduce using rule 14 (instruccion -> if_instr .)
    $end            reduce using rule 14 (instruccion -> if_instr .)


state 14

    (15) asignacion_instr -> tipo_variable . IGUAL expresion PTCOMA
    (17) asignacion_arr_st -> tipo_variable . lista_parametros IGUAL expresion PTCOMA
    (16) dec_array_instr -> tipo_variable . IGUAL ARRAY PARIZQ PARDER PTCOMA
    (18) lista_parametros -> . lista_parametros def_par
    (19) lista_parametros -> . def_par
    (20) def_par -> . CORIZQ expresion CORDER

    IGUAL           shift and go to state 28
    CORIZQ          shift and go to state 31

    lista_parametros               shift and go to state 29
    def_par                        shift and go to state 30

state 15

    (27) print_instr -> PRINT . PARIZQ valor PARDER PTCOMA

    PARIZQ          shift and go to state 32


state 16

    (28) goto_instr -> GOTO . ID PTCOMA

    ID              shift and go to state 33


state 17

    (2) def_etiqueta_instr -> ID . DOSPTS

    DOSPTS          shift and go to state 34


state 18

    (29) unset_instr -> UNSET . PARIZQ tipo_variable PARDER PTCOMA

    PARIZQ          shift and go to state 35


state 19

    (30) exit_instr -> EXIT . PTCOMA

    PTCOMA          shift and go to state 36


state 20

    (72) if_instr -> IF . PARIZQ expresion PARDER goto_instr

    PARIZQ          shift and go to state 37


state 21

    (21) tipo_variable -> TEMPVAR .

    IGUAL           reduce using rule 21 (tipo_variable -> TEMPVAR .)
    CORIZQ          reduce using rule 21 (tipo_variable -> TEMPVAR .)
    MAS             reduce using rule 21 (tipo_variable -> TEMPVAR .)
    MENOS           reduce using rule 21 (tipo_variable -> TEMPVAR .)
    MULTI           reduce using rule 21 (tipo_variable -> TEMPVAR .)
    DIVISION        reduce using rule 21 (tipo_variable -> TEMPVAR .)
    RESIDUO         reduce using rule 21 (tipo_variable -> TEMPVAR .)
    IGUALQUE        reduce using rule 21 (tipo_variable -> TEMPVAR .)
    DISTINTO        reduce using rule 21 (tipo_variable -> TEMPVAR .)
    MAYORIG         reduce using rule 21 (tipo_variable -> TEMPVAR .)
    MENORIG         reduce using rule 21 (tipo_variable -> TEMPVAR .)
    MAYORQUE        reduce using rule 21 (tipo_variable -> TEMPVAR .)
    MENORQUE        reduce using rule 21 (tipo_variable -> TEMPVAR .)
    AND             reduce using rule 21 (tipo_variable -> TEMPVAR .)
    OR              reduce using rule 21 (tipo_variable -> TEMPVAR .)
    XOR             reduce using rule 21 (tipo_variable -> TEMPVAR .)
    ANDBB           reduce using rule 21 (tipo_variable -> TEMPVAR .)
    ORBB            reduce using rule 21 (tipo_variable -> TEMPVAR .)
    XORBB           reduce using rule 21 (tipo_variable -> TEMPVAR .)
    SHIFTIZQ        reduce using rule 21 (tipo_variable -> TEMPVAR .)
    SHIFTDER        reduce using rule 21 (tipo_variable -> TEMPVAR .)
    PTCOMA          reduce using rule 21 (tipo_variable -> TEMPVAR .)
    CORDER          reduce using rule 21 (tipo_variable -> TEMPVAR .)
    PARDER          reduce using rule 21 (tipo_variable -> TEMPVAR .)


state 22

    (22) tipo_variable -> PARAM .

    IGUAL           reduce using rule 22 (tipo_variable -> PARAM .)
    CORIZQ          reduce using rule 22 (tipo_variable -> PARAM .)
    MAS             reduce using rule 22 (tipo_variable -> PARAM .)
    MENOS           reduce using rule 22 (tipo_variable -> PARAM .)
    MULTI           reduce using rule 22 (tipo_variable -> PARAM .)
    DIVISION        reduce using rule 22 (tipo_variable -> PARAM .)
    RESIDUO         reduce using rule 22 (tipo_variable -> PARAM .)
    IGUALQUE        reduce using rule 22 (tipo_variable -> PARAM .)
    DISTINTO        reduce using rule 22 (tipo_variable -> PARAM .)
    MAYORIG         reduce using rule 22 (tipo_variable -> PARAM .)
    MENORIG         reduce using rule 22 (tipo_variable -> PARAM .)
    MAYORQUE        reduce using rule 22 (tipo_variable -> PARAM .)
    MENORQUE        reduce using rule 22 (tipo_variable -> PARAM .)
    AND             reduce using rule 22 (tipo_variable -> PARAM .)
    OR              reduce using rule 22 (tipo_variable -> PARAM .)
    XOR             reduce using rule 22 (tipo_variable -> PARAM .)
    ANDBB           reduce using rule 22 (tipo_variable -> PARAM .)
    ORBB            reduce using rule 22 (tipo_variable -> PARAM .)
    XORBB           reduce using rule 22 (tipo_variable -> PARAM .)
    SHIFTIZQ        reduce using rule 22 (tipo_variable -> PARAM .)
    SHIFTDER        reduce using rule 22 (tipo_variable -> PARAM .)
    PTCOMA          reduce using rule 22 (tipo_variable -> PARAM .)
    CORDER          reduce using rule 22 (tipo_variable -> PARAM .)
    PARDER          reduce using rule 22 (tipo_variable -> PARAM .)


state 23

    (23) tipo_variable -> FUNVAL .

    IGUAL           reduce using rule 23 (tipo_variable -> FUNVAL .)
    CORIZQ          reduce using rule 23 (tipo_variable -> FUNVAL .)
    MAS             reduce using rule 23 (tipo_variable -> FUNVAL .)
    MENOS           reduce using rule 23 (tipo_variable -> FUNVAL .)
    MULTI           reduce using rule 23 (tipo_variable -> FUNVAL .)
    DIVISION        reduce using rule 23 (tipo_variable -> FUNVAL .)
    RESIDUO         reduce using rule 23 (tipo_variable -> FUNVAL .)
    IGUALQUE        reduce using rule 23 (tipo_variable -> FUNVAL .)
    DISTINTO        reduce using rule 23 (tipo_variable -> FUNVAL .)
    MAYORIG         reduce using rule 23 (tipo_variable -> FUNVAL .)
    MENORIG         reduce using rule 23 (tipo_variable -> FUNVAL .)
    MAYORQUE        reduce using rule 23 (tipo_variable -> FUNVAL .)
    MENORQUE        reduce using rule 23 (tipo_variable -> FUNVAL .)
    AND             reduce using rule 23 (tipo_variable -> FUNVAL .)
    OR              reduce using rule 23 (tipo_variable -> FUNVAL .)
    XOR             reduce using rule 23 (tipo_variable -> FUNVAL .)
    ANDBB           reduce using rule 23 (tipo_variable -> FUNVAL .)
    ORBB            reduce using rule 23 (tipo_variable -> FUNVAL .)
    XORBB           reduce using rule 23 (tipo_variable -> FUNVAL .)
    SHIFTIZQ        reduce using rule 23 (tipo_variable -> FUNVAL .)
    SHIFTDER        reduce using rule 23 (tipo_variable -> FUNVAL .)
    PTCOMA          reduce using rule 23 (tipo_variable -> FUNVAL .)
    CORDER          reduce using rule 23 (tipo_variable -> FUNVAL .)
    PARDER          reduce using rule 23 (tipo_variable -> FUNVAL .)


state 24

    (24) tipo_variable -> RA .

    IGUAL           reduce using rule 24 (tipo_variable -> RA .)
    CORIZQ          reduce using rule 24 (tipo_variable -> RA .)
    MAS             reduce using rule 24 (tipo_variable -> RA .)
    MENOS           reduce using rule 24 (tipo_variable -> RA .)
    MULTI           reduce using rule 24 (tipo_variable -> RA .)
    DIVISION        reduce using rule 24 (tipo_variable -> RA .)
    RESIDUO         reduce using rule 24 (tipo_variable -> RA .)
    IGUALQUE        reduce using rule 24 (tipo_variable -> RA .)
    DISTINTO        reduce using rule 24 (tipo_variable -> RA .)
    MAYORIG         reduce using rule 24 (tipo_variable -> RA .)
    MENORIG         reduce using rule 24 (tipo_variable -> RA .)
    MAYORQUE        reduce using rule 24 (tipo_variable -> RA .)
    MENORQUE        reduce using rule 24 (tipo_variable -> RA .)
    AND             reduce using rule 24 (tipo_variable -> RA .)
    OR              reduce using rule 24 (tipo_variable -> RA .)
    XOR             reduce using rule 24 (tipo_variable -> RA .)
    ANDBB           reduce using rule 24 (tipo_variable -> RA .)
    ORBB            reduce using rule 24 (tipo_variable -> RA .)
    XORBB           reduce using rule 24 (tipo_variable -> RA .)
    SHIFTIZQ        reduce using rule 24 (tipo_variable -> RA .)
    SHIFTDER        reduce using rule 24 (tipo_variable -> RA .)
    PTCOMA          reduce using rule 24 (tipo_variable -> RA .)
    CORDER          reduce using rule 24 (tipo_variable -> RA .)
    PARDER          reduce using rule 24 (tipo_variable -> RA .)


state 25

    (25) tipo_variable -> STACK .

    IGUAL           reduce using rule 25 (tipo_variable -> STACK .)
    CORIZQ          reduce using rule 25 (tipo_variable -> STACK .)
    MAS             reduce using rule 25 (tipo_variable -> STACK .)
    MENOS           reduce using rule 25 (tipo_variable -> STACK .)
    MULTI           reduce using rule 25 (tipo_variable -> STACK .)
    DIVISION        reduce using rule 25 (tipo_variable -> STACK .)
    RESIDUO         reduce using rule 25 (tipo_variable -> STACK .)
    IGUALQUE        reduce using rule 25 (tipo_variable -> STACK .)
    DISTINTO        reduce using rule 25 (tipo_variable -> STACK .)
    MAYORIG         reduce using rule 25 (tipo_variable -> STACK .)
    MENORIG         reduce using rule 25 (tipo_variable -> STACK .)
    MAYORQUE        reduce using rule 25 (tipo_variable -> STACK .)
    MENORQUE        reduce using rule 25 (tipo_variable -> STACK .)
    AND             reduce using rule 25 (tipo_variable -> STACK .)
    OR              reduce using rule 25 (tipo_variable -> STACK .)
    XOR             reduce using rule 25 (tipo_variable -> STACK .)
    ANDBB           reduce using rule 25 (tipo_variable -> STACK .)
    ORBB            reduce using rule 25 (tipo_variable -> STACK .)
    XORBB           reduce using rule 25 (tipo_variable -> STACK .)
    SHIFTIZQ        reduce using rule 25 (tipo_variable -> STACK .)
    SHIFTDER        reduce using rule 25 (tipo_variable -> STACK .)
    PTCOMA          reduce using rule 25 (tipo_variable -> STACK .)
    CORDER          reduce using rule 25 (tipo_variable -> STACK .)
    PARDER          reduce using rule 25 (tipo_variable -> STACK .)


state 26

    (26) tipo_variable -> SP .
